zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__focus_or_create_tab_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 2769
expression: "format!(\"{:#?}\", new_tab_event)"
---
Some(
    GoToTabName(
        "my tab name",
        (
            [],
            [],
        ),
        None,
        true,
        Some(
            1,
        ),
        None,
    ),
)
